--- a/selectcoach.html
+++ b/selectcoach.html
@@ -76,7 +76,7 @@
     <div class="w-full header-gradient h-20 flex items-center justify-between px-6 shadow-lg mb-6">
       <div class="flex items-center">
         <img
-          src="/api/placeholder/50/50"
+          src="assests/logo.jpg"
           alt="Gym logo"
           class="h-12 w-12 rounded-full border-2 border-white shadow-md mr-3"
         />
@@ -86,9 +86,9 @@
         <button class="text-white hover:text-gray-200 transition-all px-4">
           <i class="fas fa-bell text-xl"></i>
         </button>
-        <button class="text-white hover:text-gray-200 transition-all px-4">
+        <a href="dashboard.html"><button class="text-white hover:text-gray-200 transition-all px-4">
           <i class="fas fa-arrow-left text-xl"></i>
-        </button>
+        </button></a>
       </div>
     </div>
 
@@ -114,7 +114,7 @@
             <div class="relative inline-block mb-4">
               <div class="coach-img relative inline-block">
                 <img
-                  src="/api/placeholder/120/120"
+                  src="assests/strength_training_coach.jpg"
                   alt="Sarah - Strength Coach"
                   class="h-32 w-32 rounded-full shadow-lg border-4 border-indigo-200 object-cover"
                 />
@@ -133,7 +133,7 @@
             <div class="relative inline-block mb-4">
               <div class="coach-img relative inline-block">
                 <img
-                  src="/api/placeholder/120/120"
+                  src="assests/coach1.jpg"
                   alt="Mike - HIIT Coach"
                   class="h-32 w-32 rounded-full shadow-lg border-4 border-indigo-200 object-cover"
                 />
@@ -151,7 +151,7 @@
             <div class="relative inline-block mb-4">
               <div class="coach-img relative inline-block">
                 <img
-                  src="/api/placeholder/120/120"
+                  src="assests/yoga_coach.jpg"
                   alt="Emma - Yoga Coach"
                   class="h-32 w-32 rounded-full shadow-lg border-4 border-indigo-200 object-cover"
                 />
@@ -170,7 +170,7 @@
             <div class="relative inline-block mb-4">
               <div class="coach-img relative inline-block">
                 <img
-                  src="/api/placeholder/120/120"
+                  src="assests/cardio_coach.jpg"
                   alt="Jason - Cardio Coach"
                   class="h-32 w-32 rounded-full shadow-lg border-4 border-indigo-200 object-cover"
                 />
@@ -187,11 +187,11 @@
 
         <!-- Navigation Buttons -->
         <div class="flex justify-between mt-12">
-          <button
+          <a href="dashboard.html"><button
             class="text-indigo-600 bg-white border-2 border-indigo-200 font-bold py-3 px-8 rounded-full flex items-center shadow-sm hover:bg-indigo-50 transition-all"
           >
             <i class="fas fa-arrow-left mr-2"></i> BACK
-          </button>
+          </button></a>
           <a href="workout routine.html">
           <button 
             class="text-white bg-gradient-to-r from-green-500 to-emerald-600 font-bold py-3 px-10 rounded-full flex items-center shadow-lg hover:shadow-xl transition-all pulse-animation"
