--- a/dashboard.html
+++ b/dashboard.html
@@ -112,7 +112,7 @@
                 </a>
               </li>
               <li class="mb-2">
-                <a href="#" class="menu-item flex items-center px-4 py-3 rounded-lg text-sm">
+                <a href="nutrition_planner.html" class="menu-item flex items-center px-4 py-3 rounded-lg text-sm">
                   <i class="fas fa-apple-alt w-6"></i>
                   <span class="ml-2">Nutrition Planner</span>
                 </a>
@@ -124,7 +124,7 @@
                 </a>
               </li>
               <li class="mb-2">
-                <a href="#" class="menu-item flex items-center px-4 py-3 rounded-lg text-sm">
+                <a href="prevention_method.html" class="menu-item flex items-center px-4 py-3 rounded-lg text-sm">
                   <i class="fas fa-shield-alt w-6"></i>
                   <span class="ml-2">Prevention Method</span>
                 </a>
