--- a/dashboard.html
+++ b/dashboard.html
@@ -83,7 +83,7 @@
           
           <div class="mb-8">
             <div class="flex items-center mb-4">
-              <img src="/api/placeholder/50/50" alt="User avatar" class="rounded-full w-12 h-12 border-2 border-white shadow-md" />
+              <img src="assests/user_symbol.png" alt="User avatar" class="rounded-full w-12 h-12 border-2 border-white shadow-md" />
               <div class="ml-3">
                 <h3 class="font-bold">Hi, Sahil</h3>
                 <p class="text-xs text-gray-200">Premium Member</p>
