--- a/dashboard.html
+++ b/dashboard.html
@@ -118,7 +118,7 @@
                 </a>
               </li>
               <li class="mb-2">
-                <a href="#" class="menu-item flex items-center px-4 py-3 rounded-lg text-sm">
+                <a href="coaching_platform.html" class="menu-item flex items-center px-4 py-3 rounded-lg text-sm">
                   <i class="fas fa-user-friends w-6"></i>
                   <span class="ml-2">Coaching Platform</span>
                 </a>
@@ -407,13 +407,13 @@
     </div>
 
     <!-- Footer -->
-    <footer
+    <!-- <footer
       class="fixed bottom-0 left-0 right-0 gradient-bg text-white p-3 flex justify-between items-center text-lg font-semibold shadow-lg"
     >
       <span>Need Any Help?</span>
       <button class="bg-white text-purple-700 rounded-full p-2 pulse-animation">
         <i class="fas fa-robot text-lg"></i>
       </button>
-    </footer>
+    </footer> -->
   </body>
 </html>
