--- a/dashboard.html
+++ b/dashboard.html
@@ -164,9 +164,9 @@
             <button class="bg-gray-200 text-gray-700 hover:bg-gray-300 px-3 py-2 rounded-lg transition">
               <i class="fas fa-cog"></i>
             </button>
-            <button class="gradient-bg text-white px-4 py-2 rounded-lg transition shadow-md hover:shadow-lg">
+            <a href="startworkout.html"><button class="gradient-bg text-white px-4 py-2 rounded-lg transition shadow-md hover:shadow-lg">
               <i class="fas fa-plus mr-2"></i> New Workout
-            </button>
+            </button></a>
           </div>
         </div>
 
